--- a/index.html
+++ b/index.html
@@ -13,6 +13,212 @@
     <title>Jorge Teixeira</title>
   </head>
   <body>
-    Jorge Teixeira website
+    <div class="container">
+      <header>
+        <a href="#projects">Projects</a>
+        <a href="#contacts">Contacts</a>
+      </header>
+
+      <div class="hero-container">
+        <div class="hero-name">
+          <img class="avatar" src="avatar.jpg" />
+          <div>
+            <h1>Jorge Teixeira</h1>
+            <div class="hero-name-links">
+              <a
+                class="m-2"
+                href="https://github.com/jorge92teixeira"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <img src="github-logo.svg" alt="" />
+                <span>GitHub</span>
+              </a>
+              <a
+                class="m-2"
+                href="https://www.linkedin.com/in/jorgemrt/"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <img src="linkedin-logo.svg" alt="" />
+                <span>Linkedin</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="hero-description">
+          Hello. My name is Jorge Teixeira and i'm a Web Developer living in
+          London.
+        </div>
+      </div>
+
+      <div class="about-container">
+        <div class="about-items">
+          <div>
+            <p>> Jorge.currentLocation</p>
+            <p class="out">"London"</p>
+          </div>
+          <div>
+            <p>> Jorge.contactInfo</p>
+            <p class="out">
+              [
+              <a href="mailito:jorgemrt@protonmail.com"
+                >"jorgemrt@protonmail.com"</a
+              >,
+              <a
+                href="https://github.com/jorge92teixeira"
+                target="_blank"
+                rel="noreferrer"
+                >"github"</a
+              >
+              ]
+            </p>
+          </div>
+          <div>
+            <p>> Jorge.resume</p>
+            <p class="out">
+              <a href="Jorge_Teixeira_cv.pdf" target="_blank" rel="noreferrer"
+                >"Jorge_Teixeira_cv.pdf"</a
+              >
+            </p>
+          </div>
+          <div>
+            <p>> Jorge.interests</p>
+            <p class="out">["programming", "hiking", "cinema"]</p>
+          </div>
+          <div>
+            <p>> Jorge.education</p>
+            <p class="out">["Computer Science - ISEC, Coimbra, Portugal"]</p>
+          </div>
+          <div>
+            <p>> Jorge.skills</p>
+            <p class="out">
+              ["Javascript", "Node.js", "React", "Redux", "Sass", "git"]
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <h3 class="divider" id="projects">Projects</h3>
+
+      <div class="projects-container">
+        <div class="project-card">
+          <h3>social-network</h3>
+          <p>
+            A social network platform that allows users to create a profile,
+            look at other users profiles, create posts, like posts, comment on
+            posts, among other things. Authentication is handled using JSON Web
+            Tokens. The Github API is used to fetch relevant data of a user
+            Github page.
+          </p>
+          <div class="project-skills">
+            <span>JavaScript</span>
+            <span>Node.js</span>
+            <span>React</span>
+            <span>Redux</span>
+            <span>MongoDB</span>
+            <span>HTML5</span>
+            <span>CSS3</span>
+            <span>Sass</span>
+          </div>
+          <div class="project-links">
+            <!-- <a href="https://jorgemrt.com/social-network/" target="_blank" rel="noreferrer">
+          <img src="link.svg" alt="" />
+          <span>Live Demo</span>
+        </a> -->
+            <a
+              href="https://github.com/jorge92teixeira/social-network"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <img src="github-logo.svg" alt="" />
+              <span>Source</span>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>tetris</h3>
+          <p>A React implementation of the famous tetris game.</p>
+          <div class="project-skills">
+            <span>JavaScript</span>
+            <span>Node.js</span>
+            <span>React</span>
+            <span>HTML5</span>
+            <span>CSS3</span>
+            <span>Sass</span>
+          </div>
+          <div class="project-links">
+            <!-- <a href="https://jorgemrt.com/tetris/" target="_blank" rel="noreferrer">
+          <img src="link.svg" alt="" />
+          <span>Live Demo</span>
+        </a> -->
+            <a
+              href="https://github.com/jorge92teixeira/tetris"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <img src="github-logo.svg" alt="" />
+              <span>Source</span>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>chat</h3>
+          <p>
+            This website allows users to create and share private chat rooms. It
+            uses socket.io, a JavaScript library that enables real time,
+            bi-directional communication between web clients and servers.
+          </p>
+          <div class="project-skills">
+            <span>JavaScript</span>
+            <span>Node.js</span>
+            <span>React</span>
+            <span>HTML5</span>
+            <span>CSS3</span>
+            <span>Sass</span>
+          </div>
+          <div class="project-links">
+            <!-- <a href="https://jorgemrt.com/chat/" target="_blank" rel="noreferrer">
+          <img src="link.svg" alt="" />
+          <span>Live Demo</span>
+        </a> -->
+            <a
+              href="https://github.com/jorge92teixeira/chat"
+              target="_blank"
+              rel="noreferrer"
+            >
+              <img src="github-logo.svg" alt="" />
+              <span>Source</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <h3 class="divider" id="contacts">Contact Me</h3>
+
+      <div class="contact-links">
+        <a href="mailito:jorgemrt@protonmail.com">jorgemrt@protonmail.com</a>
+        <a
+          href="https://github.com/jorge92teixeira"
+          target="_blank"
+          rel="noreferrer"
+          >github</a
+        >
+        <a
+          href="https://www.linkedin.com/in/jorgemrt/"
+          target="_blank"
+          rel="noreferrer"
+          >linkedin</a
+        >
+      </div>
+
+      <footer>
+        <p>Made by Jorge Teixeira <span id="year"></span></p>
+      </footer>
+    </div>
+
+    <script>
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
   </body>
 </html>
